--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity
             android:name=".MainGameActivity"
+            android:hardwareAccelerated="true"
             android:label="tet game"
             android:screenOrientation="portrait" >
             <intent-filter>
