--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile project(':commons-lang3-3.5')
     compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'info.hoang8f:fbutton:1.0.5'
+    compile 'com.github.medyo:fancybuttons:1.8.3'
 }
