--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'info.hoang8f:fbutton:1.0.5'
     compile 'com.github.medyo:fancybuttons:1.8.3'
+    compile 'com.orhanobut:dialogplus:1.11@aar'
 }
